:sparkles: feat: Criação de rota e controller para integração da Brasil API
